# googleTest

./: CMakeLists.txt  Extern_this.cmake  README.md  compile.sh
googletest/: CMakeLists.txt  External_GTest.cmake  first_test.cpp  gtest_main.cc
main/: CMakeLists.txt  main.cpp  my_copyif.cpp  my_copyif.h  my_copyif.hpp
main/yandex_tasks/: CMakeLists.txt  in.txt  ya0.cpp  ya0.hpp
